Bug 1317779 - [2.0] [bustage fix, CLOSED TREE] Mark implicit conversion constructors explicit. r=me